--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -7,15 +7,10 @@
 <body>
     <form action="/user/login" method="post">
         <label>아이디: <input type="text" th:name="id"></label>
-        <label>비밀번호: <input type="text" th:name="pw"></label>
-        <button>로그인</button>
+        <button>초대하기</button>
     </form>
 
-    <form action="/user/register" method="post">
-        <label>아이디: <input type="text" th:name="id"></label>
-        <label>비밀번호: <input type="text" th:name="pw"></label>
-        <label>닉네임: <input type="text" th:name="nick"></label>
-        <button>회원가입</button>
+
     </form>
 </body>
 </html>
