--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -5,7 +5,7 @@
     <title>로그인/회원가입</title>
 </head>
 <body>
-    <form action="/user/login" method="post">
+    <form action="/userDTO/login" method="post">
         <label>아이디: <input type="text" th:name="id"></label>
         <button>초대하기</button>
     </form>
