Administrator 님이 변경한 내용

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -9,7 +9,7 @@
 <form action="/user/register" method="post">
     <span>아이디 : <input type="text" th:name="id"></span>
     <span>비밀번호 : <input type="text" th:name="pw"></span>
-    <input type="file" th:name="">
+    <span>프로필 사진 : <input type="file" th:name="file"></span>
     <button type="submit">회원가입</button>
 </form>
 </body>
