--- a/src/main/resources/templates/main/calendar.html
+++ b/src/main/resources/templates/main/calendar.html
@@ -1,52 +1,133 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset='utf-8' />
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/locales-all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
-
+    <script th:inline="javascript">
+        // var calList = [[${calData}]];
+        // var calList2 = [[${session}]];
+        // console.log("model" + calList[0][title]);
+        // console.log("session" + calList2);
+        var calendar = null;
         document.addEventListener('DOMContentLoaded', function() {
-            var calendarEl = document.getElementById('calendar');
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                headerToolbar: {
-                    left: 'prev,next today',
-                    center: 'title',
-                    right: 'dayGridMonth,timeGridWeek,timeGridDay'
-                },
-                navLinks: true,
-                selectable: true,
-                selectMirror: true,
-                select: function(arg) {
-                    var title = prompt("title: ")
-                    if (title) {
-                        calendar.addEvent({
-                            title: title,
-                            start: arg.start,
-                            end: arg.end,
-                            allDay: arg.allDay
-                        })
-                    }
-                    calendar.unselect()
-                },
-                eventClick: function(arg) {
-                    if (confirm('삭제?')) {
-                        arg.event.remove();
-                    }
-                },
-                editable: true,
-                dayMaxEvents: true, // allow "more" link when too many events
-                events: [
-                    {
-                        title: 'All Day Event',
-                        start: '2023-01-01'
-                    },
-                ]
-            });
+        var calendarEl = document.getElementById('calendar');
+
+        calendarObect = {
+            headerToolbar: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'dayGridMonth,timeGridWeek,timeGridDay'
+            },
+            // initialDate: '2023-01-12',
+            navLinks: true, // can click day/week names to navigate views
+            selectable: true,
+            selectMirror: true,
+            locale: 'ko',
+            select: function(arg) {
+            var title = prompt('Event Title:');
+            if (title) {
+                calendar.addEvent({
+                title: title,
+                start: arg.start,
+                end: arg.end,
+                allDay: arg.allDay
+            })
+            }
+            calendar.unselect()
+            },
+            eventClick: function(arg) {
+            if (confirm('Are you sure you want to delete this event?')) {
+                arg.event.remove() // 여기서 리무브를 시키면 안되고 db에 삭제를 시켜야 한다.
+            }
+                console.log(arg.event);
+                let events = new Array();
+                let obj = {
+                title : arg.event._def.title,
+                start : arg.event._instance.start
+                };
+
+            delete_data(obj);
+            },
+            editable: true,
+            dayMaxEvents: true, // allow "more" link when too many events
+            events: [
+
+            ]
+            }
+
+
+            calendar = new FullCalendar.Calendar(calendarEl, calendarObect);
+
             calendar.render();
-        });
+            });
+
+            function set_data() {
+                for (var value of [[${calData}]]) {
+                    value.forEach((x) => {
+
+                    })
+                }
+                return {title: '제목', start: '2023-12-01', end: '2023-12-20'};
+            }
+
+
+            function get_data() {
+                let allEvents = calendar.getEvents();
+                let eventArr = new Array();
+
+                console.log(allEvents);
+
+                for (let i = 0; i < allEvents.length; i++) {
+                let obj = {
+                title : allEvents[i]._def.title,
+                start : allEvents[i]._instance.range.start,
+                end : allEvents[i]._instance.range.end,
+                allDay: allEvents[i]._def.allDay
+                }
+                // save_data(obj);
+                eventArr.push(obj);
+                }
+                // console.log(eventArr)
+                save_data(eventArr);
+            }
+
+            function save_data(obj) {
+                $.ajax({
+                    type: 'post',
+                    url: '/save',
+                    data: JSON.stringify(obj),
+                    dataType: 'json',
+                    contentType: "application/json",
+                    success: function (data) {
+
+                    },
+                    error: function (error) {
+
+                    }
+                })
+                location.reload();
+            }
+
+            function delete_data(obj) {
+                $.ajax({
+                    type: 'post',
+                    url: '/delete',
+                    data: JSON.stringify(obj),
+                    dataType: 'json',
+                    contentType: "application/json",
+                    success: function (data) {
+                        alert("성공")
+                    },
+                    error: function (error) {
+                        alert("실패");
+                    }
+                })
+            }
+
+            calendarObect.events += set_data();
 
     </script>
     <style>
@@ -139,6 +220,19 @@
 </head>
 <body>
 <main>
+    <button onclick="get_data()">테스트용</button>
+
+    <!--    <form action="/group/create" method="post" >-->
+<!--        <input type="text" value="그룹버튼 테스트용" th:name="groupName">-->
+<!--        <button>생성</button>-->
+<!--    </form>-->
+
+<!--    <form action="/user/invite" method="post" >-->
+<!--        <input type="text" value="그룹 초대할 id" th:name="id">-->
+<!--        <input type="number" value="임시 초대 그룹 no" th:name="groupNo">-->
+<!--        <button>생성</button>-->
+<!--    </form>-->
+
     <section id="leftInfo">
         <div id="user">여기능 사용자 프로필
             <div id="userPhoto"></div>
