--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -3,7 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <title>로그인/회원가입</title>
+    <script src="https://kit.fontawesome.com/53e865f4e7.js" crossorigin="anonymous"></script>
 </head>
+<style>
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+    :root {
+        --padding: 60px;
+    }
+    .box {
+        position: relative;
+        margin: 50px auto;
+        width: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: var(--padding);
+        background-color: #c4dfff;
+        border-radius: 7px;
+    }
+
+    .box input,
+    .box button {
+        padding: 15px;
+        font-size: 1.2em;
+        border: none;
+    }
+    .box input {
+        margin-bottom: 25px;
+    }
+    .box button {
+        background-color: #ffe4c4;
+        color: #547fb2;
+        border-radius: 4px;
+    }
+
+    .sign-up-box {
+        position: absolute;
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        background-color: #86acd9;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: var(--padding);
+        right: -35px;
+        cursor: pointer;
+        transition: all 500ms ease-in-out;
+    }
+    .sign-up-box i {
+        font-size: 1.9em;
+        color: #fff;
+    }
+
+    /*.active*/
+
+    .sign-up-box.active {
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: stretch;
+        padding: 30px;
+        cursor: default;
+        border-radius: 7px;
+    }
+
+    .sign-up-box.active input,
+    .sign-up-box.active button {
+        padding: 15px;
+        font-size: 1.2em;
+        border: none;
+        margin: 0;
+    }
+    .sign-up-box.active input {
+        margin-bottom: 10px;
+    }
+
+    .sign-up-box.active > span {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        background-color: #fff;
+        border-radius: 50%;
+        top: 5px;
+        right: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #547fb2;
+        font-weight: 700;
+        cursor: pointer;
+    }
+</style>
 <body>
 
 <!--<form action="/user/login" method="post">-->
@@ -13,37 +113,77 @@
 <!--    <button type="button" onclick="location.href='user/register'" >로그인</button>-->
 <!--</form>-->
 
-<div class="container">
-    <div class="screen">
-        <div class="screen__content">
-            <form class="login" action="/user/login" method="post">
-                <div class="login__field">
-                    <i class="login__icon fas fa-user"></i>
-                    <input type="text" class="login__input" placeholder="User name / Email" th:name="id">
-                </div>
-                <div class="login__field">
-                    <i class="login__icon fas fa-lock"></i>
-                    <input type="password" class="login__input" placeholder="Password" th:name="pw">
-                </div>
-                <button class="button login__submit">
-                    <span class="button__text">Log In Now</span>
-                    <i class="button__icon fas fa-chevron-right"></i>
-                </button>
-                <button type="button" class="button login__submit" onclick="location.href='user/register'">
-                    <span class="button__text">Sign Up</span>
-                    <i class="button__icon fas fa-chevron-right"></i>
-                </button>
-            </form>
+    <form action="/user/login" method="post">
+        <div class="box">
+            <label><input type="text" th:name="id" placeholder="ID" /></label>
+            <label><input type="password" th:name="pw" placeholder="PASSWORD" /></label>
+            <button>Sign in</button>
 
+            <div class="sign-up-box">
+                <i class="fa-solid fa-pen"></i>
+            </div>
         </div>
-        <div class="screen__background">
-            <span class="screen__background__shape screen__background__shape4"></span>
-            <span class="screen__background__shape screen__background__shape3"></span>
-            <span class="screen__background__shape screen__background__shape2"></span>
-            <span class="screen__background__shape screen__background__shape1"></span>
-        </div>
-    </div>
-</div>
+    </form>
 
 </body>
 </html>
+
+
+
+<script>
+    const signUpBox = document.querySelector(".sign-up-box");
+
+    signUpBox.addEventListener("click", handleClick, false);
+    function handleClick(event) {
+        if (signUpBox.classList.contains("active")) return;
+        let str = `
+            <span onclick="event.stopPropagation(); removedActive();">X</span>
+            <input type="text" name="id" placeholder="ID"/>
+            <input type="password" name="pw" placeholder="PASSWORD"/>
+            <input type="file" name="fileData"/>
+<!--            <input type="submit" value="들어가 제발" />-->
+            <button onclick="handleSignUp()">제발 들어가줘</button>
+    `;
+        this.classList.toggle("active");
+        this.innerHTML = "";
+        setTimeout(() => (this.innerHTML = str), 500);
+    }
+
+    function handleSignUp() {
+        let signUpBoxActive = document.querySelector(".active");
+        let inputs = signUpBoxActive.querySelectorAll("input");
+        let form = document.createElement('form');
+        form.setAttribute('method', 'post');
+        form.setAttribute('action', "/user/register");
+        form.setAttribute('enctype', "multipart/form-data");
+
+        let idField = inputs[0];
+        let pwField = inputs[1];
+        let fileField = inputs[2];
+
+        // if (
+        //     idField.value === "" ||
+        //     pwField.value === "" ||
+        //     fileField.value === ""
+        // ) {
+        //     return;
+        // }
+
+        form.appendChild(idField);
+        form.appendChild(pwField);
+        form.appendChild(fileField);
+        document.body.appendChild(form);
+        form.encoding = "multipart/form-data";
+        console.log(form.encoding)
+        form.submit();
+        removedActive();
+
+    }
+
+
+
+    function removedActive() {
+        signUpBox.classList.remove("active");
+        signUpBox.innerHTML = `<i class="fa-solid fa-pen"></i>`;
+    }
+</script>
